<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jokes List</string>
    <string name="action_settings">Settings</string>
    <string name="background_change">Change background color</string>
    <string name="exit">Exit</string>
    <string name="Red">Red</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_joke">Add a new joke</string>
    <string name="add_btn">Add!</string>
    <string name="title_activity_new_joke">New Joke</string>
    <string name="write">Tell me your joke :)</string>
    <string name="author">Author:</string>
    <string name="date">Date:</string>
    <string name="title_activity_edit_joke">Edit Joke</string>
    <string name="like_btn">Like!</string>
    <string name="dislike_btn">Dislike</string>
    <string name="del_btn">Delete</string>
    <string name="done_btn">Done!</string>
    <string name="icon_desc">Like icon</string>
    <string name="todo">TODO</string>

</resources>