<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditJoke" >

    <EditText
        android:id="@+id/joke_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@layout/activity_edit_joke"
        android:ems="10"
        android:hint=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/like_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:onClick="likeClick"
        android:text="@string/like_btn" />

    <Button
        android:id="@+id/dislike_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_toRightOf="@id/like_btn"
        android:onClick="dislikeClick"
        android:text="@string/dislike_btn" />

    <Button
        android:id="@+id/del_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/joke_edit"
        android:layout_marginTop="200dp"
        android:onClick="delClick"
        android:text="@string/del_btn" />

    <Button
        android:id="@+id/done_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:onClick="doneClick"
        android:text="@string/done_btn" />

</RelativeLayout>