<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewJoke" >

    <TextView
        android:id="@+id/author_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/joke"
        android:layout_marginTop="112dp"
        android:text="@string/author" />
 
    <EditText
        android:id="@+id/author_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/author_lbl"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/author_lbl"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/date_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/date_lbl"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/date_lbl"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp"
        android:onClick="addJokeClick"
        android:text="@string/add_btn" />

    <TextView
        android:id="@+id/date_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/author_lbl"
        android:layout_below="@+id/author_lbl"
        android:layout_marginTop="18dp"
        android:text="@string/date" />

    <EditText
        android:id="@+id/joke"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/author_input"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textMultiLine"
        android:lines="5"
        android:selectAllOnFocus="true"
        android:text="@string/write" >

        <requestFocus />
    </EditText>

</RelativeLayout>